<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

    <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="8sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

    <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="8sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
                  android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

    <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="8sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="8sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|top"
        android:orientation="horizontal">
     <TextView
        android:id="@+id/isSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_serial"
         android:textSize="16sp"
         android:layout_marginTop="3dp"
         android:layout_marginLeft="10dp"/>

    <SeekBar
        android:id="@+id/seekRed"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:max="255"
        />

       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:orientation="vertical">
            <TextView
                android:id="@+id/isSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text_calibration"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/calibrationButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/myPrimaryDarkColor"
                android:text="@string/Calibration_button_text" />
            />
        <!--<Button-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/button_initialize_app"/>-->




        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/select_activity_button_text"-->
        <!--android:layout_weight="1"-->
        <!--android:id="@+id/activityButtonUserActivity"/>-->


    <!--<LinearLayout android:orientation="horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="10dp">-->
    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="create notification"-->
    <!--android:layout_weight="1"-->
    <!--android:id="@+id/createNotification"-->
    <!--android:onClick="showNotification"-->
    <!--/>-->




<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom = "true">

    </RelativeLayout>

        </LinearLayout>

    <!--</LinearLayout>-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginTop="20dp"
        android:src="@drawable/illustration"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom = "true">
    <Button
        android:id="@+id/activityButtonUserOverview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@color/myPrimaryDarkColor"
        android:text="@string/overview_large_button_bottom" />
    />
</RelativeLayout>

    <!--<ExpandableListView android:id="@+id/gatt_services_list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->


</LinearLayout>